syntax = "proto3";

package gameServiceProto;
import "google/protobuf/any.proto";

message XYZVector {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message Motion {
  string    mapName  = 1;
  XYZVector position = 2;
  XYZVector rotation = 3;
  XYZVector velocity = 4;
}

message Character {
  string id = 1;
  string instanceId = 2;
  string mapId = 3;
  Motion motion = 4;
}

 enum GameServiceMessageTypeE{
     CharactersLoadReqE     = 0;
     CharactersLoadRespE    = 1;
     CharactersUpdateReqE   = 2;
     CharactersUpdateRespE  = 3;
 }

 message CharactersLoadReq {
   uint64 token = 1;
 }

message CharactersLoadResp {
   bool                result     = 1;
   Character           player     = 2;
   repeated Character  characters = 3;
}

message CharactersUpdateReq {
  repeated Character  characters = 2;
}

message CharactersUpdateResp {
   bool                result     = 1;
   repeated Character  characters = 2;
}

message GameServiceMessage {
   GameServiceMessageTypeE id = 1;
   oneof payload {
     CharactersLoadReq    characters_load_request    = 2;
     CharactersLoadResp   characters_load_response   = 3;
     CharactersUpdateReq  characters_update_request  = 4;
     CharactersUpdateResp characters_update_response = 5;
   }
}
